indivuall player sites and creating template

--- a/Player-Bios/player-bios-index.html
+++ b/Player-Bios/player-bios-index.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Tournaments</title>
   </head>
+  <style>
+    .Name {
+      color: white;
+    }
+  </style>
   <body>
     <nav class="nav collapsible">
       <a href="../index.html"
@@ -55,7 +60,9 @@
       </header>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Alejandro</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Alejandro.html">Alejandro</a>
+          </h3>
           <p>League Comissioner</p>
           <p>Current World Cup Champion</p>
           <p>Flair Shot Enthusiast (LT + B)</p>
@@ -66,7 +73,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Michael</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Michael.html">Michael</a>
+          </h3>
           <p>Vice Comissioner</p>
           <p>Best Young Player: Season 1 World Cup</p>
           <p>Lukaku Fanboy</p>
@@ -77,7 +86,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Joe</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Joe.html">Joe</a>
+          </h3>
           <p>Vice Comissioner & Co-Technology Director</p>
           <p>Golden Glove Award: Season 1 World Cup</p>
           <p>Dirty Ass</p>
@@ -88,7 +99,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">John</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="John.html">John</a>
+          </h3>
           <p>Tournament Director</p>
           <p>New League Member</p>
           <p>INSERT SOMETHING</p>
@@ -99,7 +112,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Charlie</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Charlie.html">Charlie</a>
+          </h3>
           <p>Insert something</p>
           <p>New League Member</p>
           <p>Lost 15 Followers after posting about the league</p>
@@ -110,7 +125,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Karsin</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Karsin.html">Karsin</a>
+          </h3>
           <p>Referee & Governance Director</p>
           <p>Golden Boot Award: Season 1 World Cup</p>
           <p>Fine Ass</p>
@@ -121,7 +138,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Gabe</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Gabe.html">Gabe</a>
+          </h3>
           <p>AP Pre-Season Poll #1: Michigan League</p>
           <p>Golden Ball Award: Season 1 World Cup</p>
           <p>Probably will never see this website</p>
@@ -132,7 +151,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">J.T.</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="JT.html">J.T.</a>
+          </h3>
           <p>INSERT SOMETHING</p>
           <p>AP Poll's Most Likely to be Good if he cared award</p>
           <p>Refuses to Play because he doesn't want to learn the controls</p>
@@ -143,7 +164,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Jake</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Jake.html">Jake</a>
+          </h3>
           <p>INSERT SOMETHING</p>
           <p>INSERT SOMETHING</p>
           <p>INSERT SOMETHING</p>
@@ -154,7 +177,9 @@
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-          <h3 class="feature__heading">Grand Flank</h3>
+          <h3 class="feature__heading">
+            <a class="Name" href="Grand-Flank.html">Grand Flank</a>
+          </h3>
           <p>International Correspondants</p>
           <p>Offical Commentators for the World Cup</p>
           <p>FIFA 23 Enthusiasts</p>
