start playerbio, template

--- a/Player-Bios/Alejandro.html
+++ b/Player-Bios/Alejandro.html
@@ -20,6 +20,17 @@
     .bio-header {
       font-size: 9rem;
     }
+    .GOTW {
+      width: 80%;
+      align-items: center;
+    }
+
+    .feature__image {
+      margin-right: 0;
+      padding: 1rem;
+      box-shadow: none;
+      border-radius: 20px;
+    }
   </style>
   <body>
     <nav class="nav collapsible">
@@ -75,6 +86,58 @@
           <img class="feature__image" src="" alt="Alej Photo" />
         </picture>
       </article>
+    </section>
+    <section>
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Awards</h2>
+        <p class="seasons-text">Alejandro is the Current World Cup Champion</p>
+        <p class="seasons-text">
+          Alejandro was the recipient of the 3<sup>rd</sup>, 5<sup>th</sup>, and
+          6<sup>th</sup>
+          Goal of the Week Trophies
+        </p>
+      </header>
+      <div class="GOTW-container">
+        <div class="grid grid--1x2 row">
+          <img
+            class="feature__image GOTW"
+            src="Player-Bio-Photos/GOTW3.jpg"
+            alt="Ale Winning GOTW #3"
+          />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/UVTkwfmLkF8"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="grid grid--1x2 row">
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/GOTW5.jpg"
+            alt="Ale Winning GOTW #5"
+          />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/LpRSWZGngz8"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="grid grid--1x2 row">
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/GOTW6.jpg"
+            alt="Ale Winning GOTW #6"
+          />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/OKLO0bgzuu8"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
     </section>
   </body>
 </html>
