more bio template

--- a/Player-Bios/Alejandro.html
+++ b/Player-Bios/Alejandro.html
@@ -115,6 +115,13 @@
     .feature:first-of-type {
       margin-top: 0.5rem;
     }
+    .s1 {
+      margin-bottom: 1rem;
+    }
+
+    .fav-text {
+      justify-content: center;
+    }
   </style>
   <body>
     <nav class="nav collapsible">
@@ -291,6 +298,26 @@
           />
         </p>
       </article>
+    </section>
+    <article class="feature reduce-gap">
+      <div class="feature__content">
+        <h3 class="feature__heading">Season 1 Stats:</h3>
+      </div>
+    </article>
+    <section>
+      <article class="grid grid--1x2 feature">
+        <div class="s1">
+          <p class="fav-text">Season 1 Record:</p>
+          <p class="fav-text">121 - 66</p>
+          <p class="fav-text">64.4%</p>
+        </div>
+        <div class="s1">
+          <p class="fav-text">402 FIFA World Cup</p>
+          <p class="fav-text">3 - 0</p>
+          <p class="fav-text">Champion</p>
+        </div>
+      </article>
+      <article class="grid grid--1x2 feature"></article>
     </section>
     <article class="feature reduce-gap">
       <div class="feature__content">
