--- a/Player-Bios/Alejandro.html
+++ b/Player-Bios/Alejandro.html
@@ -21,106 +21,83 @@
       font-size: 9rem;
     }
 
-    .feature__image {
-      height: 100%;
-      width: 90%;
-      padding: 0 auto;
-    }
-
-    .favorites {
-      text-align: center;
-      font-size: 4rem;
-      text-shadow: 2px 2px 4px #444444;
-    }
-
     .crests {
       width: 75px;
       max-height: 75px;
       object-fit: contain;
       justify-content: start;
-      margin-right: 25px;
     }
 
     .crests:last-child {
       margin-right: 0;
     }
 
-    .player:first-of-type {
-      margin-left: 70px;
-    }
-
-    .fav-text {
-      color: white;
-      display: flex;
-      align-items: center;
-    }
-
-    p {
-      margin: 0;
-    }
-
-    .feature {
-      row-gap: 5px;
-    }
-
-    .feature h3 {
-      font-size: 6rem;
-    }
-
-    .feature .small {
-      font-size: 3.5rem;
-    }
-
-    @media screen and (min-width: 768px) {
-      .season-text {
-        margin-bottom: 1.5rem;
-      }
-      .crests {
-        margin: 0 28px 0 5px;
-      }
-      .feature__image {
-        margin-left: 100px;
-      }
-
-      .favorites {
-        font-size: 7rem;
-      }
-
-      .feature:first-of-type {
-        margin-top: 5px;
-      }
-      .block__header {
-        margin-bottom: 1.5rem;
-      }
-      .seasons-text-end {
-        margin-bottom: 40px;
-      }
-    }
     .centered-container {
+      /*this is for songs*/
       display: flex;
       justify-content: center;
       align-items: center;
       margin-top: 0px;
     }
-
-    .reduce-gap {
-      margin-bottom: 0;
+    .GOTW__video {
+      margin: auto;
+    }
+    .songcenter {
+      margin-bottom: -40px;
+    }
+    .scale__button {
+      scale: 0.8;
+    }
+    .feature:first-of-type {
+      margin-top: 2rem;
+    }
+    .seemore {
+      color: white;
+      font-size: 2.5rem;
+      text-shadow: 2px 2px 4px #444444;
       text-align: center;
     }
 
-    .feature {
-      margin-top: 0.5rem;
-    }
-
-    .feature:first-of-type {
-      margin-top: 0.5rem;
-    }
-    .s1 {
+    .block__header {
       margin-bottom: 1rem;
     }
+    .fav__table {
+      font-size: 24px;
+      text-align: center;
+      color: white;
+      text-shadow: 2px 2px 4px #444444;
+      border-radius: 8px;
+      width: 100%;
+    }
 
-    .fav-text {
+    .fav__table tr:nth-child(2) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .table__insert {
+      border: 3px solid rgb(30, 32, 29);
+      flex: 1 1 33%;
+      display: flex;
+      align-items: center;
       justify-content: center;
+      padding: 2px;
+    }
+
+    .crests {
+      margin-left: 4px;
+    }
+    .crests__nomargin {
+      margin: 0;
+      width: 50px;
+      max-height: 50px;
+      object-fit: scale-down;
+    }
+
+    .position {
+      margin-bottom: 0;
+      margin-right: 5px;
     }
   </style>
   <body>
@@ -164,7 +141,7 @@
         </p>
       </header>
     </section>
-    <section>
+    <section class="block container">
       <header class="block__header">
         <h2 class="seasons-header bio-header">Awards</h2>
         <p class="seasons-text">Alejandro is the Current World Cup Champion</p>
@@ -174,13 +151,14 @@
           Goal of the Week Trophies
         </p>
       </header>
-      <article class="grid grid--1x2 feature">
+      <article class="feature grid grid--1x2">
         <img
           class="feature__image"
           src="Player-Bio-Photos/GOTW3.jpg"
           alt="Ale Winning GOTW #3"
         />
         <iframe
+          class="GOTW__video"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/UVTkwfmLkF8"
@@ -194,6 +172,7 @@
           alt="Ale Winning GOTW #5"
         />
         <iframe
+          class="GOTW__video"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/LpRSWZGngz8"
@@ -207,6 +186,7 @@
           alt="Ale Winning GOTW #6"
         />
         <iframe
+          class="GOTW__video"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/OKLO0bgzuu8"
@@ -214,6 +194,8 @@
         ></iframe>
       </article>
     </section>
+
+    <!---
     <article class="feature reduce-gap">
       <div class="feature__content">
         <h3 class="feature__heading">Fun Facts</h3>
@@ -258,45 +240,10 @@
     <section>
       <article class="grid grid--1x2 feature">
         <h3 class="feature__heading favorites small">Favorite Teams:</h3>
-        <p class="fav-text">
-          Belgium
-          <img
-            class="crests"
-            src="../Season-1-Team-Logos/belgiumcrest.png"
-            alt="Belgium Crest"
-          />
-          Portugal<img
-            class="crests"
-            src="../Season-1-Team-Logos/portugalcrest.png"
-            alt="Portual crest"
-          />
-          Mexico<img
-            class="crests"
-            src="../Season-1-Team-Logos/mexicocrest.png"
-            alt="Mexico crest"
-          />
-        </p>
+        
       </article>
       <article class="grid grid--1x2 feature">
         <h3 class="feature__heading favorites small">Favorite Players:</h3>
-        <p class="fav-text">
-          Kompany
-          <img
-            class="crests"
-            src="../FIFA Player Headshots/kompany.png"
-            alt="Belgium Crest"
-          />
-          Ibrahimović<img
-            class="crests"
-            src="../FIFA Player Headshots/Zlatan.png"
-            alt="Portual crest"
-          />
-          Hazard<img
-            class="crests"
-            src="../FIFA Player Headshots/Hazard.png"
-            alt="Mexico crest"
-          />
-        </p>
       </article>
     </section>
     <article class="feature reduce-gap">
@@ -319,47 +266,179 @@
       </article>
       <article class="grid grid--1x2 feature"></article>
     </section>
-    <article class="feature reduce-gap">
-      <div class="feature__content">
-        <h3 class="feature__heading">Top 3 FIFA Songs:</h3>
+    -->
+    <section>
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Top 3 FIFA Songs:</h2>
+      </header>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/5TloYFwzd09yWy8xkRLVUu?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
       </div>
-    </article>
-    <div class="centered-container">
-      <iframe
-        class="songcenter"
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/5TloYFwzd09yWy8xkRLVUu?utm_source=generator"
-        width="90%"
-        height="200"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-    </div>
-    <div class="centered-container">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/4JlKk8J0Q7IdNchS0iJRSj?utm_source=generator"
-        width="90%"
-        height="200"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-    </div>
-    <div class="centered-container">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/78EQ5LZGgviMU9k0zrqv1r?utm_source=generator"
-        width="90%"
-        height="200"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-    </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/4JlKk8J0Q7IdNchS0iJRSj?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/78EQ5LZGgviMU9k0zrqv1r?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Tournament Performances:</h2>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">1<sup>st</sup> annual World Cup</h3>
+          <div>
+            <p>
+              Alejandro came into the tournament spliting the last 6 Games with
+              his 1<sup>st</sup> round matchup: Karsin.
+            </p>
+            <p>
+              He ended up winning what would be the only match in the tournament
+              to go to penalites.
+            </p>
+            <p>
+              He then went on to win two games in a row against Gabe to claim
+              the first ever World Cup title, with a 116' winner in Golden Goal.
+            </p>
+          </div>
+          <button class="button2 scale__button">
+            <a
+              class="links"
+              href="../Tournaments/Tournaments-folder/WC-R11.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/alej-wc.JPEG"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Favorites</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Teams:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Belgium
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="Belgium Crest"
+            />
+          </td>
+          <td class="table__insert">
+            Portugal<img
+              class="crests"
+              src="../Season-1-Team-Logos/portugalcrest.png"
+              alt="Portual crest"
+            />
+          </td>
+          <td class="table__insert">
+            Mexico<img
+              class="crests"
+              src="../Season-1-Team-Logos/mexicocrest.png"
+              alt="Mexico crest"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Players:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Kompany
+            <img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/kompany.png"
+              alt="Kompany"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="Belgium Crest"
+            />
+            <p class="position">CB</p>
+          </td>
+          <td class="table__insert">
+            Ibrahimović<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/Zlatan.png"
+              alt="Ibrahimović"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/sweedencrest.png"
+              alt="Belgium Crest"
+            />
+            <p class="position">ST</p>
+          </td>
+          <td class="table__insert">
+            Hazard<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/Hazard.png"
+              alt="Hazard"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="Belgium Crest"
+            />
+            <p class="position">LW</p>
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Season 1 Stats:</h2>
+      </header>
+      <p class="seemore">
+        View Season 1 Player's Stats, See the Season 1 Stats & Info Section:
+      </p>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-1-Driver/S1-index.html">Season 1 →</a>
+      </button>
+    </section>
   </body>
 </html>
