--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </header>
             <div class="card__body">
               <p class="card__text">
-                Explore the league's premier soccer tournaments, where legends
+                Explore the league's premier football tournaments, where legends
                 are made and dreams become reality. Uncover the riveting
                 narratives and legendary matches that define these unparalleled
                 showcases of skill and passion.
