--- a/Season-1-Driver/S1-index.html
+++ b/Season-1-Driver/S1-index.html
@@ -67,17 +67,13 @@
         <div class="feature__content">
           <h3 class="feature__heading">Individual Stats</h3>
           <button class="button2">
-            <a class="links" href="Season-2-Driver/S2-index.html"
-              >Learn More →</a
-            >
+            <a class="links" href="s1-indivstats.html">Learn More →</a>
           </button>
         </div>
         <div class="feature__content">
           <h3 class="feature__heading">League Stats</h3>
           <button class="button2">
-            <a class="links" href="Season-2-Driver/S2-index.html"
-              >Learn More →</a
-            >
+            <a class="links" href="s1-leaguestats.html">Learn More →</a>
           </button>
         </div>
       </article>
@@ -85,15 +81,13 @@
         <div class="feature__content">
           <h3 class="feature__heading">Team Data</h3>
           <button class="button2">
-            <a class="links" href="Season-2-Driver/S2-index.html"
-              >Learn More →</a
-            >
+            <a class="links" href="s1-teamdata.html">Learn More →</a>
           </button>
         </div>
         <div class="feature__content">
           <h3 class="feature__heading">Graphs</h3>
           <button class="button2">
-            <a class="links" href="Season-2-Driver/S2-index.html">See More →</a>
+            <a class="links" href="s1-graphs.html">See More →</a>
           </button>
         </div>
       </article>
